--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
+      
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -24,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.awaisssss.illegalparkingreportingsystem"
     },
     "web": {
       "favicon": "./assets/favicon.png"
