--- a/package.json
+++ b/package.json
@@ -1,18 +1,49 @@
 {
   "name": "illegal-parking-reporting-system",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~46.0.9",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-community/google-signin": "^5.0.0",
+    "@react-native-firebase/app": "^15.7.0",
+    "@react-native-firebase/firestore": "^15.7.0",
+    "@react-native-firebase/storage": "^16.0.0",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
+    "expo": "^46.0.10",
+    "expo-app-loading": "~2.1.0",
+    "expo-camera": "~12.3.0",
+    "expo-dev-client": "~1.3.0",
+    "expo-firebase-recaptcha": "~2.3.0",
+    "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
+    "expo-permissions": "~13.2.0",
+    "expo-sharing": "~10.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "firebase": "^9.10.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-camera": "^4.2.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-paper": "^5.0.0-rc.6",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
