--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-appearance": "^0.3.4",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-crop-picker": "^0.38.0",
